@@ -2,6 +2,7 @@
 =======================
 - fix mistake in assignment.
 - add amd map format parser.
+- check for non existent negative entries in lookup_ghost().
 
 28/03/2014 autofs-5.0.9
 =======================
